--- a/style.css
+++ b/style.css
@@ -39,9 +39,15 @@ body{
 .modal-card button{
     padding: 10px;
     font-size: 20px;
-    border: 0;
+    border: 1px solid rgb(39, 207, 212);
     outline: 0;
     background-color: rgb(39, 207, 212);
     color: white;
     border-radius: 5px;
+    cursor: pointer;
+}
+
+.modal-card button:hover{
+    color: black;
+    background-color: white;
 }
