--- a/style.css
+++ b/style.css
@@ -1,53 +1,82 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-image: url('https://images.pexels.com/photos/1366957/pexels-photo-1366957.jpeg');
-    background-position: center center ;
-    background-size: cover;
-    background-repeat: no-repeat;
-    
+body {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  background-image: url("https://images.pexels.com/photos/1366957/pexels-photo-1366957.jpeg");
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-
-.modal-card{
-    background-color: white;
-    padding: 20px;
-    width: 500px;
-    height: 300px;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
+.modal-card {
+  background-color: white;
+  padding: 20px;
+  width: 500px;
+  height: 300px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
 
-.modal-card h1{
-    text-transform: capitalize;
-    font-size: 50px;
+.modal-card h1 {
+  text-transform: capitalize;
+  font-size: 50px;
 }
 
-.modal-card button{
-    padding: 10px;
-    font-size: 20px;
-    border: 1px solid rgb(39, 207, 212);
-    outline: 0;
-    background-color: rgb(39, 207, 212);
-    color: white;
-    border-radius: 5px;
-    cursor: pointer;
+.modal-card button {
+  padding: 10px;
+  font-size: 20px;
+  border: 1px solid rgb(39, 207, 212);
+  outline: 0;
+  background-color: rgb(39, 207, 212);
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-.modal-card button:hover{
-    color: black;
-    background-color: white;
+.modal-card button:hover {
+  color: black;
+  background-color: white;
+}
+
+dialog::backdrop {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+dialog[open] {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  width: 400px;
+  height: 200px;
+  padding: 15px;
+  border-radius: 10px;
+  position: static;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+dialog button{
+  padding: 8px 16px;
+  font-size: 16px;
+  outline: 0;
+  border: 0;
+  background-color: tomato;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
 }
